# mcp_akshare

./: .gitignore  .mcp.json  CLAUDE.md  akshare-server  download_akshare_docs.sh  pyproject.toml  run.py  test.py  test_acceptance.py  test_new.py
baostock_docs/: baostock.md
src/mcp_akshare/: __init__.py  formatters.py  registry.py  registry_baostock.py  registry_tencent.py  server.py
tencent_docs/: tencent.md
tests/: test_formatters.py  test_registry.py  test_registry_baostock.py  test_registry_tencent.py  test_server.py
