[project]
name = "mcp-akshare"
version = "0.1.0"
description = "MCP server for akshare financial data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.14.0",
    "fastmcp>=2.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
