[project]
name = "mcp-akshare"
version = "0.1.0"
description = "MCP server for akshare financial data"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.14.0",
    "baostock>=0.8.8",
    "fastmcp>=2.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# 排除 server.py (MCP 工具函数，难以单元测试)
omit = ["*/server.py"]

[tool.coverage.report]
# 排除 server.py
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
